--- a/task0004/zchen9/css/todo.less
+++ b/task0004/zchen9/css/todo.less
@@ -544,7 +544,7 @@ header {
 
     .todo-task-list {
         > li {
-            width: 92%;
+            width: 98%;
         }
     }
 
@@ -560,7 +560,7 @@ header {
             max-height: 78%;
 
             .fa-smile-o {
-                margin-right: 3em;
+                margin-right: 6em;
             }
         }
     }
@@ -642,6 +642,32 @@ header {
             margin-left: 45%;
         }
     }
+
+    /*todo-category*/
+
+    .todo-task-list {
+        > li {
+            width: 94%;
+        }
+    }
+
+    .todo-inventory,
+    .todo-category {
+
+        > a {
+            .add-btns();
+        }
+
+        .todo-category-detail,
+        .todo-inventory-detail {
+            max-height: 78%;
+
+            .fa-smile-o {
+                margin-right: 3.2em;
+            }
+        }
+    }
+
     /*todo-spec*/
     .todo-spec {
         .todo-spec-content {
