--- a/task0004/zchen9/css/todo.css
+++ b/task0004/zchen9/css/todo.css
@@ -428,7 +428,7 @@ header .todo-title {
   }
   /*todo-category*/
   .todo-task-list > li {
-    width: 92%;
+    width: 98%;
   }
   .todo-inventory > a,
   .todo-category > a {
@@ -463,7 +463,7 @@ header .todo-title {
   .todo-category .todo-category-detail .fa-smile-o,
   .todo-inventory .todo-inventory-detail .fa-smile-o,
   .todo-category .todo-inventory-detail .fa-smile-o {
-    margin-right: 3em;
+    margin-right: 6em;
   }
   /*todo-spec*/
   .todo-spec .todo-spec-title,
@@ -528,6 +528,45 @@ header .todo-title {
   }
   header .todo-title {
     margin-left: 45%;
+  }
+  /*todo-category*/
+  .todo-task-list > li {
+    width: 94%;
+  }
+  .todo-inventory > a,
+  .todo-category > a {
+    position: absolute;
+    top: 2px;
+    right: 8px;
+    display: block;
+    width: 20px;
+    height: 20px;
+    overflow: hidden;
+    border-radius: 5px;
+    z-index: 999999;
+    cursor: pointer;
+    background-color: transparent;
+  }
+  .todo-inventory > a:hover,
+  .todo-category > a:hover {
+    color: #294b7c;
+    background-color: transparent;
+  }
+  .todo-inventory > a > .fa-plus,
+  .todo-category > a > .fa-plus {
+    margin: 1px 5px 20px 1px;
+  }
+  .todo-inventory .todo-category-detail,
+  .todo-category .todo-category-detail,
+  .todo-inventory .todo-inventory-detail,
+  .todo-category .todo-inventory-detail {
+    max-height: 78%;
+  }
+  .todo-inventory .todo-category-detail .fa-smile-o,
+  .todo-category .todo-category-detail .fa-smile-o,
+  .todo-inventory .todo-inventory-detail .fa-smile-o,
+  .todo-category .todo-inventory-detail .fa-smile-o {
+    margin-right: 3.2em;
   }
   /*todo-spec*/
   .todo-spec .todo-spec-content > p {
