--- a/task0004/app/styles/todo.less
+++ b/task0004/app/styles/todo.less
@@ -167,7 +167,7 @@ header {
         height: 60px;
         margin-left: 20px;
 
-        background: url(../img/icon-logo.png);
+        background: url(../images/icon-logo.png);
     }
 
     .todo-title {
